Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
     </section>
 
     <section class="main-content">
-      
+      <p>Instruções para o uso do YAD</p>
+
+<ul>
+<li><p>Contagem regressiva para fechar a janela (5 segundos)
+--timeout=5\</p></li>
+<li><p>Titulo da caixa de Diaologo
+--title="Titulo Janela"\</p></li>
+<li><p>Largura(800) e Altura(500) da janela
+--width=800 --height=500 \</p></li>
+<li><p>Largura Borda da Janela
+--image-on-top --borders=50 \</p></li>
+<li><p>inicia a caixa de dialogo no centro da tela
+--center </p></li>
+<li><p>Deixa a Caixa de Dialogo sem a decoração (basicamente o título com seus ícones)
+--undecorated </p></li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/hanaure/YAD">Yad</a> is maintained by <a href="https://github.com/hanaure">hanaure</a>.</span>
