--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Yad</title>
-  <meta name="description" content="Instruções Básicas para Uso do YAD ">
+  <meta name="description" content="Instruções Básicas para Uso do YAD (Alpha 0.1)">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Yad</h1>
     </header>
     <div id="container">
-      <p class="tagline">Instruções Básicas para Uso do YAD </p>
+      <p class="tagline">Instruções Básicas para Uso do YAD (Alpha 0.1)</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
