Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h1>
-<a id="instruções-para-o-uso-do-yad" class="anchor" href="#instru%C3%A7%C3%B5es-para-o-uso-do-yad" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Instruções para o uso do YAD</h1>
+          <p>``# Instruções para o uso do YAD</p>
 
 <ul>
 <li>Contagem regressiva para fechar a janela (5 segundos)</li>
@@ -80,6 +79,8 @@
 
 <h2>
 <a id="--undecorated" class="anchor" href="#--undecorated" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--undecorated</h2>
+
+<p><code>--undecorated</code></p>
         </article>
       </div>
     </div>
