Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,47 +38,33 @@
         <article class="markdown-body">
           <p>``# Instruções para o uso do YAD</p>
 
-<ul>
-<li>Contagem regressiva para fechar a janela (5 segundos)</li>
-</ul>
+<h2>
+<a id="-contagem-regressiva-para-fechar-a-janela-5-segundos" class="anchor" href="#-contagem-regressiva-para-fechar-a-janela-5-segundos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* Contagem regressiva para fechar a janela (5 segundos)</h2>
+
+<p><code>--timeout=5\</code></p>
 
 <h2>
-<a id="--timeout5" class="anchor" href="#--timeout5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--timeout=5\</h2>
+<a id="-titulo-da-caixa-de-diaologo" class="anchor" href="#-titulo-da-caixa-de-diaologo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* Titulo da caixa de Diaologo</h2>
 
-<ul>
-<li>Titulo da caixa de Diaologo</li>
-</ul>
+<p><code>--title="Titulo Janela"\</code></p>
 
 <h2>
-<a id="--titletitulo-janela" class="anchor" href="#--titletitulo-janela" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--title="Titulo Janela"\</h2>
+<a id="-largura800-e-altura500-da-janela" class="anchor" href="#-largura800-e-altura500-da-janela" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* Largura(800) e Altura(500) da janela</h2>
 
-<ul>
-<li>Largura(800) e Altura(500) da janela</li>
-</ul>
+<p><code>--width=800 --height=500 \</code></p>
 
 <h2>
-<a id="--width800---height500-" class="anchor" href="#--width800---height500-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--width=800 --height=500 \</h2>
+<a id="-largura-borda-da-janela" class="anchor" href="#-largura-borda-da-janela" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* Largura Borda da Janela</h2>
 
-<ul>
-<li>Largura Borda da Janela</li>
-</ul>
+<p><code>--image-on-top --borders=50 \</code></p>
 
 <h2>
-<a id="--image-on-top---borders50-" class="anchor" href="#--image-on-top---borders50-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--image-on-top --borders=50 \</h2>
+<a id="-inicia-a-caixa-de-dialogo-no-centro-da-tela" class="anchor" href="#-inicia-a-caixa-de-dialogo-no-centro-da-tela" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* inicia a caixa de dialogo no centro da tela</h2>
 
-<ul>
-<li>inicia a caixa de dialogo no centro da tela</li>
-</ul>
+<p><code>--center</code> </p>
 
 <h2>
-<a id="--center" class="anchor" href="#--center" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--center</h2>
-
-<ul>
-<li>Deixa a Caixa de Dialogo sem a decoração (basicamente o título com seus ícones)</li>
-</ul>
-
-<h2>
-<a id="--undecorated" class="anchor" href="#--undecorated" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>--undecorated</h2>
+<a id="-deixa-a-caixa-de-dialogo-sem-a-decoração-basicamente-o-título-com-seus-ícones" class="anchor" href="#-deixa-a-caixa-de-dialogo-sem-a-decora%C3%A7%C3%A3o-basicamente-o-t%C3%ADtulo-com-seus-%C3%ADcones" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>* Deixa a Caixa de Dialogo sem a decoração (basicamente o título com seus ícones)</h2>
 
 <p><code>--undecorated</code></p>
         </article>
